--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "devDependencies": {
     "babel-loader": "^7.1.3",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^v4.0.0-beta.0",
+    "style-loader": "^0.20.2",
     "ts-loader": "^4.0.0",
     "typescript": "^2.7.2",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
+    "webpack-cli": "^2.0.9"
   },
   "dependencies": {
     "@types/chrome": "^0.0.58",
+    "css-loader": "^0.28.10",
     "keymaster": "^1.6.2",
     "typings-for-css-modules-loader": "^1.7.0"
   },
-  "name": "messenger",
+  "name": "messenger-plugin",
   "version": "1.0.0",
-  "main": "webpack.config.js",
+  "main": "index.bundle.js",
   "scripts": {
     "prepublish": "webpack --optimize-minimize --config webpack.config.js --mode production"
   },
